<resources>
    <string name="app_name">Volume Control</string>
    <string name="download_server_url">volume.nulldozer.com</string>
    <!-- Strings related to Settings -->

    <string name="settings_ui_category">User Interface</string>
        <string name="settings_ui_night_mode">Nightmode</string>
        <string name="settings_ui_hide_application_icon">Hide Application Icons</string>
            <string name="settings_ui_hide_application_icon_description">Note: also disables the Mute function</string>
        <string name="settings_ui_fullscreen">Fullscreen</string>
        <string name="settings_ui_show_ip">Show IP-Address of servers</string>
    <string name="settings_app_category">Application</string>
        <string name="settings_app_revert_values">Reset Volume</string>
            <string name="settings_app_revert_values_description">On disconnect resets the PC-Volume to the value it had before this device connected</string>
        <string name="settings_app_auto_connect_last">Auto connect to last connected</string>
        <string name="settings_app_auto_connect_open">Auto connect to passwordless servers</string>
        <string name="settings_app_reduce_sensitivity">Reduce slider sensitivity</string>
        <string name="settings_app_reduce_sensitivity_description">Increases performance by reducing the frequency of sending volume changes</string>
    <string name="title_activity_settings">Settings</string>


    <!--Menu Strings-->

    <!--Server Context Menu Strings-->
    <string name="server_menu_forget">Forget password</string>
    <string name="server_menu_disconnect">Disconnect</string>
    <!--Genereal Context Menu Strings-->
    <string name="main_menu_refresh">Refresh servers</string>
    <string name="main_menu_feedback">Give feedback</string>
    <string name="main_menu_how_to_use">How to use</string>
    <string name="main_menu_settings">Settings</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="download_server_at">To download and for install intructions visit</string>
    <string name="first_use_dialog_main_text">To properly use this app you have to install the Windows Application on the computer you want to remote control</string>
    <string name="empty_list_view_download_prompt">Download the Windows Application here:</string>
    <string name="how_was_your_experience_with_us">How was your experience with us?</string>
    <string name="submit">submit</string>


    <!--feedback strings-->
    <string name="feedback_hint_neutral_feedback">Tell us about your experience with us or what we could do better</string>
    <string name="feedback_title_neutral_feedback">Please help us improve this app by giving feedback</string>

    <string name="feedback_hint_bad_feedback">Tell us about your experience</string>
    <string name="feedback_title_bad_feedback">Did something go wrong and how could we improve?</string>

    <string name="send">send</string>
    <string name="thanks_for_feedback">Thanks for your help improving this app</string>

</resources>
