<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp" android:paddingRight="30dp" android:paddingTop="15dp" android:paddingBottom="15dp">

    <TextView
        android:id="@+id/tvFeedbackDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/feedback_title_neutral_feedback"/>
    <EditText
        android:id="@+id/editTextFeedbackText"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="5"
        android:gravity="top|start"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:hint="@string/feedback_hint_neutral_feedback"
    />
    <EditText
        android:layout_marginTop="4dp"
        android:id="@+id/editTextFeedbackEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Email (optional)"/>


    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="right"/>
</LinearLayout>